--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.19",
     "@tanstack/react-virtual": "^3.13.18",
     "axios": "^1.13.2",
+    "lucide-react": "^0.562.0",
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-intersection-observer": "^10.0.2",
     "swr": "^2.3.8"
   },
   "devDependencies": {
@@ -24,8 +27,8 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
+    "json-server-client": "workspace:*",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "json-server-client": "workspace:*"
+    "typescript": "^5"
   }
 }
