--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@tanstack/react-query": "^5.90.19",
     "@tanstack/react-virtual": "^3.13.18",
     "axios": "^1.13.2",
+    "immer": "^11.1.3",
     "json-server-client": "workspace:*",
     "lucide-react": "^0.562.0",
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-intersection-observer": "^10.0.2",
-    "swr": "^2.3.8"
+    "swr": "^2.3.8",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
